fix alignments of lauretans

--- a/src/assets/scss/components/_programme-teaser.scss
+++ b/src/assets/scss/components/_programme-teaser.scss
@@ -7,6 +7,8 @@
     // @include xy-cell( 6 ); pre styri predstavenia
     @include xy-cell(6);
     margin: 0 auto;
+    justify-content: flex-start;
+    padding-bottom: 10px;
   }
   
 
@@ -21,6 +23,10 @@
     color: $amp-button-color;
   }
 
+  &__item:nth-child(2n + 1) &__title {
+    text-align: right;
+  }
+
   &__item:nth-child(2n + 2) &__title,
   &__item:nth-child(2n + 3) &__title {
     @include rotate-ccw-m;
@@ -32,6 +38,10 @@
 
   &__description {
     font-size: rem-calc(16);
+  }
+
+  &__item:nth-child(2n + 1) &__description {
+    text-align: right;
   }
 
   &__item_full {
@@ -56,7 +66,7 @@
       @include xy-gutters(25px, "padding");
       display: flex;
       flex-flow: column nowrap;
-      justify-content: center;
+      justify-content: flex-start;
     }
 
     &__title {
